# acai

./: .gitignore  Cargo.toml  build.rs  build.zig
acai/acai/: acai.swift
acai/acai.xcodeproj/: project.pbxproj
acai/acai/Device/: Capability.swift  Hardware.swift  Software.swift
completions/: _acai  _acai.ps1  acai.bash  acai.elv  acai.fish  acai.ts
data/seeds/: google-chrome.json
src/: cli.rs  common.rs  dmg_helper.rs  install.rs  main.rs  main.zig  seed.rs
src/utils/: logging.zig
