[package]
name = "acai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
home = "0.5.5"
os-version = "0.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
spinners = "4.1.0"
uname = "0.1.1"
