[package]
name = "acai"
description = "Fast package manager for macOS apps"
version = "1.0.0"
edition = "2021"
keywords = ["cli", "macos", "packages"]
authors = ["Nebula <me@itsnebula.net>"]
homepage = "https://github.com/AcaiPM/acai"
repository = "https://github.com/AcaiPM/acai"

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
home = "0.5.5"
os-version = "0.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
spinners = "4.1.0"
uname = "0.1.1"
ureq = { version = "*", features = ["json", "charset"] }

[build-dependencies]
clap = { version = "4.3.3", features = ["derive"] }
clap_complete = "4.3.0"
clap_complete_fig = "4.3.0"
